Update 8 ball pool.html

--- a/8 ball pool game/8 ball pool.html
+++ b/8 ball pool game/8 ball pool.html
@@ -3,7 +3,20 @@
         <title>8 ball pool game</title>
     </head>
     <body>
+        <style>
+            * {
+                padding: 0;
+                margin: 0;
+                box-sizing: border-box;
+            }
+            .container {
+                display: flex;
+                justify-content: center;
+            }
+        </style>
+        <div class="container">
         <canvas id = "screen" width="1500" height="825"></canvas> 
+        </div>
         <script src = "Vector2.js"></script>  
         <script src = "input/ButtonState.js"></script>
         <script src = "input/Mouse.js"></script>
